tests/expectations/compiler/finalize/unknown_mapping_operation_fail.out
Error [ETYC0372005]: Unknown function `test.aleo::Mapping::has_key`
    --> compiler-test:10:25
     |
  10 |     let has_key: bool = Mapping::has_key(account, receiver);
     |                         ^^^^^^^^^^^^^^^^
